--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "BEADL - BEhAvioral task Description Language"
+title: "BEADL"
 remote_theme: just-the-docs/just-the-docs
 color_scheme: dark
