--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,10 @@ color_scheme: dark
 # Set page title
 title: "BEADL"
 
+description: BEhAvioral Description Language
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://beadl.org" # the base hostname & protocol for your site, e.g. http://example.com
+
 # Set a path/url to a logo that will be displayed instead of the title
 logo: "/assets/images/BEADL_logo_inv.png"
 
