--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,14 @@
 remote_theme: just-the-docs/just-the-docs
 
 # Color scheme supports "light" (default) and "dark"
-color_scheme: dark
+color_scheme: light
 
 # Set page title
 title: "BEADL"
 
-description: BEhAvioral Description Language
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://beadl.org" # the base hostname & protocol for your site, e.g. http://example.com
-
 # Set a path/url to a logo that will be displayed instead of the title
 logo: "/assets/images/BEADL_logo_inv.png"
 
-
+description: BEhAvioral Description Language
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://beadl.org" # the base hostname & protocol for your site, e.g. http://example.com
