--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 remote_theme: just-the-docs/just-the-docs
 
 # Color scheme supports "light" (default) and "dark"
-color_scheme: light
+#color_scheme: light
 
 # Set page title
 title: "BEADL"
