--- a/_config.yml
+++ b/_config.yml
@@ -18,4 +18,4 @@ aux_links:
     - "https://sites.wustl.edu/kepecslab/"
 
 # Makes Aux links open in a new tab. Default is false
-aux_links_new_tab: false
+aux_links_new_tab: true
