--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
+  "BEADL Editor":
+    - "https://staging.d237p8s4oa0mfk.amplifyapp.com"
   "Code on GitHub":
     - "//github.com/BEADL"
   "Kepecs Lab":
