--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,5 @@ aux_links_new_tab: true
 
 # Footer content
 # appears at the bottom of every page's main content
-# Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust
-markup / liquid-based content.
+# Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust markup / liquid-based content.
 footer_content: "Footer Content Copyright &copy; 2022 Michael Wulf. Theme: <a href="https://just-the-docs.github.io/just-the-docs/">Just the Docs</a>"
