--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,4 @@ aux_links_new_tab: true
 # Footer content
 # appears at the bottom of every page's main content
 # Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust markup / liquid-based content.
-footer_content: "Footer Content Copyright &copy; 2022 Michael Wulf. Theme: <a href=\"https://just-the-docs.github.io/just-the-docs/\" target=\"_blank\">Just the Docs</a>."
-
-
-#footer_content: "Footer Content Copyright &copy; 2022 Michael Wulf, Washington University in St. Louis, Kepecs Lab. Theme: <a href=\"https://github.com/pmarsceill/just-the-docs\" target=\"_blank\">Just the Docs</a>. Support: <a href=\"https://github.com/petersenpeter/CellExplorer/issues\" target=\"_blank\">GitHub issues</a>, <a href=\"https://groups.google.com/g/cellexplorer/\" target=\"_blank\">Google group</a>, or <a href=\"mailto:petersen.peter@gmail.com\" target=\"_blank\">email</a>."
+footer_content: "Copyright &copy; 2022 Michael Wulf, Washington University in St. Louis, Kepecs Lab. Theme: <a href=\"https://just-the-docs.github.io/just-the-docs/\" target=\"_blank\">Just the Docs</a>."
